--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <body>
       <h1 class='text-center mt-2 mb-4'>{{company_name}} Carrers</h1>
       <div class='container' >
-      <img class ='img-fluid mt-2 mb-4'id='banner'src='https://82427c5a-4664-472d-8a5a-aa31c0e1f850-00-1ea1akqi0a5br.sisko.replit.dev/static/img1.jpg' height =100
+      <img class ='img-fluid mt-2 mb-4'id='banner'src='./static/img1.jpg' height =100
         >
       <h2 class='text-center mt-2 mb-4'>About Mahesh Kumar</h2>
       <p class='lead mt-2 mb-4'>
